--- a/views/phone/addressList.twig
+++ b/views/phone/addressList.twig
@@ -3,6 +3,7 @@
  <div class="m-3">
   <a href="?Map={{ mapNumber }}"><i class="fas fa-angle-left"></i> Back to street list</a>
 </div>
+{% endif %}
 
 <ul class="list-group">
   {% for address in addresses %}
