--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -48,12 +48,12 @@
 
 {% block content %}
 
-<img src="img/memorial-2021.png" class="img-fluid" alt="A picture of Jesus using his arms to warmly direct us the way to go.">
+<img src="img/rc-2021.jpg" class="img-fluid" alt="A happy family taking in a beautiful view together.">
 <div class="bg-dark">
-  <h6 class="text-white pt-3 text-center">2021 Memorial Invitation Campaign</h6>
-        <div class="text-center">
+  <h6 class="text-white py-3 text-center">2021 Convention Invitation Campaign</h6>
+        <!--<div class="text-center">
           <span class="badge badge-light mb-2" ic-get-from="getLettersSentTotal.php" ic-trigger-on="load"><i class="fa fa-spinner fa-spin"></i> letters sent</span>
-        </div>
+        </div>-->
 </div>
 
 
