Lazy load publisher list

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -75,125 +75,15 @@
   </div>
 </nav>
 <div class="tab-content" id="nav-tabContent">
-  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-    <div class="list-group">
-      <a href="my-list.php?name=Brett" class="list-group-item list-group-item-action">Brett</a>
-      <a href="my-list.php?name=Nicole" class="list-group-item list-group-item-action">Nicole</a>
-      <a href="my-list.php?name=Fran" class="list-group-item list-group-item-action">Fran</a>
-      <a href="my-list.php?name=Gionatan" class="list-group-item list-group-item-action">Gionatan</a>
-      <a href="my-list.php?name=Bianca" class="list-group-item list-group-item-action">Bianca</a>
-      <a href="my-list.php?name=Anna" class="list-group-item list-group-item-action">Anna</a>
-      <a href="my-list.php?name=Jun" class="list-group-item list-group-item-action">Jun</a>
-      <a href="my-list.php?name=Calum" class="list-group-item list-group-item-action">Calum</a>
-      <a href="my-list.php?name=Lucas" class="list-group-item list-group-item-action">Lucas</a>
-      <a href="my-list.php?name=Jacqueline-E" class="list-group-item list-group-item-action">Jacqueline</a>
-      <a href="my-list.php?name=GeorgiaS" class="list-group-item list-group-item-action">Georgia</a>
-      <a href="my-list.php?name=Indiana" class="list-group-item list-group-item-action">Indiana</a>
-      <a href="my-list.php?name=Karl" class="list-group-item list-group-item-action">Karl</a>
-      <a href="my-list.php?name=Talitha" class="list-group-item list-group-item-action">Talitha</a>
-      <a href="my-list.php?name=Texas" class="list-group-item list-group-item-action">Texas</a>
-      <a href="my-list.php?name=Larry" class="list-group-item list-group-item-action">Larry</a>
-      <a href="my-list.php?name=Denise" class="list-group-item list-group-item-action">Denise</a>
-      <a href="my-list.php?name=Jonah" class="list-group-item list-group-item-action">Jonah</a>
-      <a href="my-list.php?name=Jamie" class="list-group-item list-group-item-action">Jamie</a>
-      <a href="my-list.php?name=Karen" class="list-group-item list-group-item-action">Karen</a>
-      <a href="my-list.php?name=Mia" class="list-group-item list-group-item-action">Mia</a>
-      <a href="my-list.php?name=Dan" class="list-group-item list-group-item-action">Dan</a>
-      <a href="my-list.php?name=Jaqueline-H" class="list-group-item list-group-item-action">Jaqueline</a>
-      <a href="my-list.php?name=Lucia" class="list-group-item list-group-item-action">Lucia</a>
-      <a href="my-list.php?name=Viv" class="list-group-item list-group-item-action">Viv</a>
-      <a href="my-list.php?name=Group-1-Extras" class="list-group-item list-group-item-action">Group 1 Extras</a>
-    </div>
+  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" ic-get-from="group-list.php?overseer=Zac" ic-trigger-on="load">
+
   </div>
-  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-    <div class="list-group">
-      <a href="my-list.php?name=Alison" class="list-group-item list-group-item-action">Alison</a>
-      <a href="my-list.php?name=Faz" class="list-group-item list-group-item-action">Faz</a>
-      <a href="my-list.php?name=GeorgiaK" class="list-group-item list-group-item-action">Georgia</a>
-      <a href="my-list.php?name=Olivia" class="list-group-item list-group-item-action">Olivia</a>
-      <a href="my-list.php?name=Mathias" class="list-group-item list-group-item-action">Mathias</a>
-      <a href="my-list.php?name=Jenny" class="list-group-item list-group-item-action">Jenny</a>
-      <a href="my-list.php?name=Michael" class="list-group-item list-group-item-action">Michael</a>
-      <a href="my-list.php?name=Ange" class="list-group-item list-group-item-action">Ange</a>
-      <a href="my-list.php?name=John" class="list-group-item list-group-item-action">John</a>
-      <a href="my-list.php?name=Cynthia" class="list-group-item list-group-item-action">Cynthia</a>
-      <a href="my-list.php?name=Maurizio" class="list-group-item list-group-item-action">Maurizio</a>
-      <a href="my-list.php?name=Geoff" class="list-group-item list-group-item-action">Geoff</a>
-      <a href="my-list.php?name=Deb" class="list-group-item list-group-item-action">Deb</a>
-      <a href="my-list.php?name=Val" class="list-group-item list-group-item-action">Val</a>
-      <a href="my-list.php?name=Sky" class="list-group-item list-group-item-action">Sky</a>
-      <a href="my-list.php?name=Lulu" class="list-group-item list-group-item-action">Lulu</a>
-      <a href="my-list.php?name=Asia" class="list-group-item list-group-item-action">Asia</a>
-      <a href="my-list.php?name=Fienne" class="list-group-item list-group-item-action">Fienne</a>
-      <a href="my-list.php?name=Brooke" class="list-group-item list-group-item-action">Brooke</a>
-      <a href="my-list.php?name=Hugh" class="list-group-item list-group-item-action">Hugh</a>
-      <a href="my-list.php?name=Diana" class="list-group-item list-group-item-action">Diana</a>
-      <a href="my-list.php?name=Group-2-Extras" class="list-group-item list-group-item-action">Group 2 Extras</a>
-    </div>
+  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" ic-get-from="group-list.php?overseer=Nick" ic-trigger-on="load">
   </div>
-  <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-    <div class="list-group">
-      <a href="my-list.php?name=Tania" class="list-group-item list-group-item-action">Tania</a>
-      <a href="my-list.php?name=Jason" class="list-group-item list-group-item-action">Jason</a>
-      <a href="my-list.php?name=Remon" class="list-group-item list-group-item-action">Remon</a>
-      <a href="my-list.php?name=Megan" class="list-group-item list-group-item-action">Megan</a>
-      <a href="my-list.php?name=Michelle" class="list-group-item list-group-item-action">Michelle</a>
-      <a href="my-list.php?name=Shayne" class="list-group-item list-group-item-action">Shayne</a>
-      <a href="my-list.php?name=Colin" class="list-group-item list-group-item-action">Colin</a>
-      <a href="my-list.php?name=Sam" class="list-group-item list-group-item-action">Sam</a>
-      <a href="my-list.php?name=Amelie" class="list-group-item list-group-item-action">Amelie</a>
-      <a href="my-list.php?name=Slater" class="list-group-item list-group-item-action">Slater</a>
-      <a href="my-list.php?name=Edna" class="list-group-item list-group-item-action">Edna</a>
-      <a href="my-list.php?name=Phil" class="list-group-item list-group-item-action">Phil</a>
-      <a href="my-list.php?name=Brendon" class="list-group-item list-group-item-action">Brendon</a>
-      <a href="my-list.php?name=Francis" class="list-group-item list-group-item-action">Francis</a>
-      <a href="my-list.php?name=Bailey" class="list-group-item list-group-item-action">Bailey</a>
-      <a href="my-list.php?name=Kabe" class="list-group-item list-group-item-action">Kabe</a>
-      <a href="my-list.php?name=Bodhi" class="list-group-item list-group-item-action">Bodhi</a>
-      <a href="my-list.php?name=Marty" class="list-group-item list-group-item-action">Marty</a>
-      <a href="my-list.php?name=Jess" class="list-group-item list-group-item-action">Jess</a>
-      <a href="my-list.php?name=Javier" class="list-group-item list-group-item-action">Javier</a>
-      <a href="my-list.php?name=Remy" class="list-group-item list-group-item-action">Remy</a>
-      <a href="my-list.php?name=Kailey" class="list-group-item list-group-item-action">Kailey</a>
-      <a href="my-list.php?name=Rie" class="list-group-item list-group-item-action">Rie</a>
-      <a href="my-list.php?name=Yuuki" class="list-group-item list-group-item-action">Yuuki</a>
-      <a href="my-list.php?name=Tuula" class="list-group-item list-group-item-action">Tuula</a>
-      <a href="my-list.php?name=Tony" class="list-group-item list-group-item-action">Tony</a>
-      <a href="my-list.php?name=Richard" class="list-group-item list-group-item-action">Richard</a>
-      <a href="my-list.php?name=Lyndy" class="list-group-item list-group-item-action">Lyndy</a>
-      <a href="my-list.php?name=Extra" class="list-group-item list-group-item-action">Extra</a>
-      <a href="my-list.php?name=Group-3-Extras" class="list-group-item list-group-item-action">Group 3 Extras</a>
-    </div>
+  <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" ic-get-from="group-list.php?overseer=Shayne" ic-trigger-on="load">
+    
   </div>
-   <div class="tab-pane fade" id="nav-craig" role="tabpanel" aria-labelledby="nav-craig-tab">
-        <div class="list-group">
-      <a href="my-list.php?name=Ivanna" class="list-group-item list-group-item-action">Ivanna</a>
-      <a href="my-list.php?name=Jono" class="list-group-item list-group-item-action">Jono</a>
-      <a href="my-list.php?name=Nevarra" class="list-group-item list-group-item-action">Nevarra</a>
-      <a href="my-list.php?name=Noemi" class="list-group-item list-group-item-action">Noemi</a>
-      <a href="my-list.php?name=Vin" class="list-group-item list-group-item-action">Vin</a>
-      <a href="my-list.php?name=Angie" class="list-group-item list-group-item-action">Angie</a>
-      <a href="my-list.php?name=Shannon" class="list-group-item list-group-item-action">Shannon</a>
-      <a href="my-list.php?name=Ches" class="list-group-item list-group-item-action">Ches</a>
-      <a href="my-list.php?name=Pat" class="list-group-item list-group-item-action">Pat</a>
-      <a href="my-list.php?name=Juanita" class="list-group-item list-group-item-action">Juanita</a>
-      <a href="my-list.php?name=Craig" class="list-group-item list-group-item-action">Craig</a>
-      <a href="my-list.php?name=Justin" class="list-group-item list-group-item-action">Justin</a>
-      <a href="my-list.php?name=Abigail" class="list-group-item list-group-item-action">Abigail</a>
-      <a href="my-list.php?name=Elizabeth" class="list-group-item list-group-item-action">Elizabeth</a>
-      <a href="my-list.php?name=Lisa" class="list-group-item list-group-item-action">Lisa</a>
-      <a href="my-list.php?name=Mikaela" class="list-group-item list-group-item-action">Mikaela</a>
-      <a href="my-list.php?name=Ning" class="list-group-item list-group-item-action">Ning</a>
-      <a href="my-list.php?name=Pauline" class="list-group-item list-group-item-action">Pauline</a>
-      <a href="my-list.php?name=Bel" class="list-group-item list-group-item-action">Bel</a>
-      <a href="my-list.php?name=Zach" class="list-group-item list-group-item-action">Zach</a>
-      <a href="my-list.php?name=Callan" class="list-group-item list-group-item-action">Callan</a>
-      <a href="my-list.php?name=Karlene" class="list-group-item list-group-item-action">Karlene</a>
-      <a href="my-list.php?name=Ayden" class="list-group-item list-group-item-action">Ayden</a>
-      <a href="my-list.php?name=Hannah" class="list-group-item list-group-item-action">Hannah</a>
-      <a href="my-list.php?name=Roger" class="list-group-item list-group-item-action">Roger</a>
-      <a href="my-list.php?name=Group-4-Extras" class="list-group-item list-group-item-action">Group 4 Extras</a>
-    </div>
+   <div class="tab-pane fade" id="nav-craig" role="tabpanel" aria-labelledby="nav-craig-tab" ic-get-from="group-list.php?overseer=Craig" ic-trigger-on="load">
    </div>
 </div>
 
