Add 'request addresses' info box

--- a/views/my-list.html.twig
+++ b/views/my-list.html.twig
@@ -149,7 +149,12 @@
   {% endfor %}
 </ul>
 
-
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Need more addresses?</h5>
+    <p class="card-text">Ask for more addresses via <a href="https://chat.whatsapp.com/BPkWX9YiAdEAJ80u0vExON ">WhatsApp</a></p>
+  </div>
+</div>
         
 
 {% endblock %}
