--- a/views/addressing-guide/index.html.twig
+++ b/views/addressing-guide/index.html.twig
@@ -66,7 +66,7 @@
     <dd class="col-sm-9">Should contain the number and name of the street.</dd>
 
     <dt class="col-sm-3">Bottom line</dt>
-    <dd class="col-sm-9">Should contain the suburb and state. This line should be printed in capitals without punctuation or underlining.</dd>
+    <dd class="col-sm-9">Should contain the suburb and state. This line should be written using capitals without punctuation or underlining.</dd>
   </dl>
 
   <h4>Which type of envelope?</h4>
@@ -77,7 +77,7 @@
     <li>Write the four numerals of the destination postcode clearly within the squares</li>
     <li>Write the suburb and NSW on the bottom line in upper case</li>
     <li>Use the correct postcode</li>
-    <li>Print clearly using dark ink; preferably black on white</li>
+    <li>Write clearly using dark ink; preferably black on white</li>
     <li>Affix stamps that add up to or is more than $1.10 for a letter in a DL or DLX envelope (not A5)</li>
   </ul>
   <img src="../img/correctly-hand-addressed-envelope.png" class="img-fluid mb-4" alt="Correctly addressed envelope">
